[package]
edition = "2021"
name = "futures-any"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {version = "0.3.21"}
log = "0.4.16"
vtable = "0.1.7"

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
